# simple_ros_control

./: .gitmodules  CMakeLists.txt  README.md  package.xml
communication_interface/: CMakeLists.txt  package.xml
communication_interface/src/: asusbot_diff_ros_control.cpp  communication_interface.cpp
config/: communication.yaml
ethercat_igh/: CMakeLists.txt
ethercat_igh/src/: ethercat_igh.c
include/: .sp_hardware_interface.h.swp
launch/: arm_ros_control.launch
simple_robot_config/: CMakeLists.txt  package.xml
simple_robot_config/config/: arm_controllers.yaml  arm_ros_control.yaml  controller_list.yaml  diff_controllers.yaml  diff_ros_control.yaml  hardware_interface.yaml
simple_robot_description/: CMakeLists.txt  package.xml
simple_robot_description/robots/: simple_diff_robot.gazebo  simple_diff_robot.xacro  simple_robot.urdf
simple_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
simple_robot_moveit_config/config/: controller_list.yaml  simple_robot.srdf
simple_robot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
simple_ros_control/: CMakeLists.txt  package.xml
simple_ros_control_main/: CMakeLists.txt  package.xml
src/: .sp_hardware_interface.cpp.swp  .sp_main.cpp.swp  sp_hardware_interface.cpp
(+10 files in other folders)
