<?xml version="1.0"?>
<package>
  <name>simple_ros_control</name>
  <version>0.0.0</version>
  <description>A simple ros control interface.</description>

  <maintainer email="willie5588912@gmail.com">Wei Shih</maintainer>
  <author email="willie5588912@gmail.com">Wei Shih</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>simple_robot_config</run_depend>
  <run_depend>simple_robot_moveit_config</run_depend>
  <run_depend>simple_robot_description</run_depend>
  <run_depend>simple_ros_control_main</run_depend>

  <export>
     <metapackage/>
   </export>
</package>
